# DINOv1_implem

./: .gitignore  README.md  Trainer.py  eval.py  onstart.sh  pyproject.toml  train.py  utils.py
checkpoints/: qvmay5sl_1_checkpoint.pt  qvmay5sl_2_checkpoint.pt
configs/: cifar10.yml  cifar100.yml  config_models.py  dino.yml  dino_head.yml  imagenet.yml  imagenette.yml  stl10.yml
models/: DINO.py  DINO_head.py  DINO_loss.py
training_output/CIFAR10_qvmay5sl/: ConfigDINO.json  ConfigDINO_Head.json  ConfigDataset.json  student_backbone.pt  teacher_backbone.pt
